--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*",
