--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "homepage": "https://github.com/Zekarant/MyKpopTrade---Back#readme",
   "description": "",
   "dependencies": {
+    "@types/nodemailer": "^6.4.17",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
+    "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
     "passport-facebook": "^3.0.0",
