--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,30 @@
-node_modules
-node_modules/*
+# Environment variables
 .env
 .env.local
+.env.*.local
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependencies
+node_modules/
 package-lock.json
+yarn.lock
+
+# Build output
+dist/
+build/
+
+# IDE specific files
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+
+# OS specific files
+.DS_Store
+Thumbs.db
