--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "description": "",
   "dependencies": {
     "@types/nodemailer": "^6.4.17",
+    "@types/winston": "^2.4.4",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -33,7 +34,11 @@
     "passport-discord": "^0.1.4",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "twilio": "^5.5.2",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
