--- a/package.json
+++ b/package.json
@@ -23,21 +23,26 @@
   "dependencies": {
     "@types/joi": "^17.2.2",
     "@types/nodemailer": "^6.4.17",
+    "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
     "bcrypt": "^5.1.1",
+    "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "sharp": "^0.34.1",
     "twilio": "^5.5.2",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.24.3"
@@ -47,6 +52,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.3",
     "@types/passport": "^1.0.17",
     "@types/passport-discord": "^0.1.14",
