--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -62,6 +63,7 @@
     "@types/passport-facebook": "^3.0.3",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
+    "@types/validator": "^13.15.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
