--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.2",
+    "node-cron": "^4.0.4",
     "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
@@ -58,6 +59,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.3",
+    "@types/node-cron": "^3.0.11",
     "@types/passport": "^1.0.17",
     "@types/passport-discord": "^0.1.14",
     "@types/passport-facebook": "^3.0.3",
