--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcryptjs": "^3.0.2",
     "canvas": "^3.1.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "isomorphic-dompurify": "^2.24.0",
@@ -47,6 +48,7 @@
     "sharp": "^0.34.1",
     "twilio": "^5.5.2",
     "uuid": "^11.1.0",
+    "wikipedia": "^2.1.2",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.24.3"
